--- a/style.css
+++ b/style.css
@@ -793,6 +793,9 @@ margin: 15px 0 20px 0;
   width: 100px;
   text-align: center;
 }
+#remove{
+  color: black;
+}
 #cart-1 table td:nth-child(2){
   width: 150px;
   text-align: center;
