--- a/style.css
+++ b/style.css
@@ -886,7 +886,21 @@ margin: 15px 0 20px 0;
   padding: 10px;
   font-size: 13px;
 }
-
+.empty{
+  padding: 15px;
+  padding-left: 580px;
+}
+#removeall{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border-radius: 3px;
+  border: 1PX solid white;
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+  margin-left: 1220px;
+  margin-top: 20px;
+  color: white;
+  background-color: red;
+}
 
 
 
